Bug 482364 - Errors calling translation
Summary: Errors calling translation
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-04 10:18 UTC by Victor Ryzhykh
Modified: 2024-03-23 00:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch fixes in the master branch (2.10 KB, patch)
2024-03-04 10:20 UTC, Victor Ryzhykh
Details
Patch for branch 23.08 (2.16 KB, patch)
2024-03-04 10:21 UTC, Victor Ryzhykh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Ryzhykh 2024-03-04 10:18:07 UTC
Two translation strings are not displayed in the application interface.
Two lines are not available at all in files https://invent.kde.org/utilities/konsole/-/tree/master/po

Operating System: ROSA Fresh Desktop 2023.1
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.115.0
Qt Version: 5.15.12
Kernel Version: 6.6.20-generic-1rosa2023.1-x86_64 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-7700K CPU @ 4.20GHz
Memory: 15.5 ГиБ of RAM
Graphics Processor: NVIDIA GeForce RTX 3050/PCIe/SSE2
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: B250M-D3H
Comment 1 Victor Ryzhykh 2024-03-04 10:20:44 UTC
Created attachment 166383 [details]
Patch fixes in the master branch

Patch fixes in the master branch.
It shows which lines are missing translations.
Comment 2 Victor Ryzhykh 2024-03-04 10:21:59 UTC
Created attachment 166385 [details]
Patch for branch 23.08

Patch for branch 23.08
Comment 3 Kurt Hindenburg 2024-03-22 23:55:41 UTC
Thanks, I'll commit this shortly.