Fix strings to allow translations

BUG: 482364